# nnue

./: .gitignore  CMakeLists.txt  README.md  perf.md
demo/: demo.cpp  dirty_piece.hpp  evaluator.hpp  generator.hpp  position.hpp  searcher.hpp
src/: accumulator.hpp  affine_tranform.cpp  affine_tranform.hpp  clipped_relu.cpp  clipped_relu.hpp  common.hpp  demo.cpp  features.hpp  header.hpp  index.hpp  mul_clipped_relu.hpp  network.hpp  nnue.cpp  nnue.hpp  sqr_clipped_relu.cpp  sqr_clipped_relu.hpp
src/nnue/: accumulator.hpp  affine_tranform.hpp  clipped_relu.hpp  common.hpp  features.hpp  header.hpp  index.hpp  mul_clipped_relu.hpp  network.hpp  nnue.hpp  sqr_clipped_relu.hpp
test/: test.cpp  test_affine_tranform.cpp  test_affine_tranform.hpp  test_clipped_relu.cpp  test_clipped_relu.hpp  test_mul_clipped_relu.cpp  test_mul_clipped_relu.hpp  test_nnue.hpp  test_sqr_clipped_relu.cpp  test_sqr_clipped_relu.hpp
